tests/dataset/tpc-ds/compiler/cpp/q61.error
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:77:26: error: ‘s’ was not declared in this scope
   77 |     std::vector<decltype(s.price)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:77:34: error: template argument 1 is invalid
   77 |     std::vector<decltype(s.price)> __items;
      |                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:77:34: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:81:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   81 |       __items.push_back(s.price);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:76:5:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:75:30: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
   75 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                            ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:75:41: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
   75 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                                       ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:88:26: error: ‘s’ was not declared in this scope
   88 |     std::vector<decltype(s.price)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:88:34: error: template argument 1 is invalid
   88 |     std::vector<decltype(s.price)> __items;
      |                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:88:34: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:90:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   90 |       __items.push_back(s.price);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:87:5:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:86:30: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
   86 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                            ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq611231607452/001/prog.cpp:86:41: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
   86 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                                       ~~^~~
